--- a/wp-content/themes/understrap-child/sass/theme/partials/_display_state_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_display_state_styles.scss
@@ -166,6 +166,7 @@ display: none;
     }
     .objectives-diagram__horizontal--delta {
     display: flex;
+    transform: translateX(-300%);
 }
 
 
