--- a/wp-content/themes/understrap-child/sass/theme/partials/variables/_theme_color_and_nav_variables.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/variables/_theme_color_and_nav_variables.scss
@@ -15,7 +15,7 @@ $spiro-disco-ball:                     #23C9FF;
 $magic-mint:                           #A9FFCB;
 
 
-$ash-gray:                             #B3BFBF;
+$ash-gray:                             #B3BFBF; 
 $gunmetal-gray:                        #708787;
 $gunmetal:                             rgba(45, 58, 58, 1);
 $rich-primary:                           darken(#daeaf7, 40%);
@@ -126,7 +126,7 @@ $para-color: 					                 inherit;
 //*rgba
 
 
-$link-color:                           $primary;
+$link-color:                           $secondary;
 $link-decoration:                      $orange;
 $link-hover-color:                     $accent;
 $link-hover-decoration:                none;
