seo validations and fixes

--- a/wp-content/themes/understrap-child/css/child-theme.css
+++ b/wp-content/themes/understrap-child/css/child-theme.css
@@ -24219,6 +24219,9 @@ button {
   z-index: 0;
   overflow: hidden; }
 
+.home__splash-header_container {
+  visibility: none; }
+
 .splash__label_divider {
   color: #9dd1f1; }
 
